salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <description>Stores the email used during intake. Used by the Approval Trigger to link the Contact and User.</description>
    <label>Applicant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>