salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Excellence_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Excellence_Ratio__c</fullName>
    <formula>IF(
  Total_Seals__c &gt; 0,
  (Positive_Verdicts__c + Safety_Badges__c) / Total_Seals__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excellence Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>