salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Intake_Slug__c.field-meta.xml
<CustomField>
    <fullName>Intake_Slug__c</fullName>
    <formula>LOWER(SUBSTITUTE(Name, &quot; &quot;, &quot;-&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Slug</label>
    <type>Text</type>
</CustomField>