salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Intake_URL__c.field-meta.xml
<CustomField>
    <fullName>Intake_URL__c</fullName>
    <description>Auto-generated link for patient intake.</description>
    <formula>&quot;https://orgfarm-b28044d04d-dev-ed.develop.my.site.com/zothportalv4/s/intake?ref=&quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake URL</label>
    <type>Text</type>
</CustomField>