salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Last_Review_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Assigned_Date__c</fullName>
    <label>Last Review Assigned Date</label>
    <type>DateTime</type>
</CustomField>