salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Medical_License__c.field-meta.xml
<CustomField>
    <fullName>Medical_License__c</fullName>
    <label>Medical License</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>