salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Negative_Verdicts__c.field-meta.xml
<CustomField>
    <fullName>Negative_Verdicts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Negative Verdicts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>