salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/New_Intakes_Month__c.field-meta.xml
<CustomField>
    <fullName>New_Intakes_Month__c</fullName>
    <defaultValue>0</defaultValue>
    <label>New Intakes (Month)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>