salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Revenue_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Percentage__c</fullName>
    <formula>CASE(
   Tier_Formula__c ,
  &quot;Sovereign&quot;, 0.90,
  &quot;Practitioner&quot;, 0.70,
  &quot;Probation&quot;, 0.50,
  0.50
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Share Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>