salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Safety_Badges__c.field-meta.xml
<CustomField>
    <fullName>Safety_Badges__c</fullName>
    <label>Safety Badges</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>