salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Tier_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tier_Formula__c</fullName>
    <formula>IF(AND(Trust_Score__c &gt;= 95, Excellence_Ratio__c &gt;= 0.10), &quot;Sovereign&quot;,
  IF(Trust_Score__c &gt;= 80, &quot;Practitioner&quot;,
    &quot;Probation&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Formula</label>
    <type>Text</type>
</CustomField>