salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Total_Seals__c.field-meta.xml
<CustomField>
    <fullName>Total_Seals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Seals</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>