salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Trust_Score__c.field-meta.xml
<CustomField>
    <fullName>Trust_Score__c</fullName>
    <defaultValue>70</defaultValue>
    <label>Trust Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>