salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related To: User. (This links the profile to the login).</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Doctors</relationshipName>
    <type>Lookup</type>
</CustomField>