salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/fields/Vote_Weight_Formula_c__c.field-meta.xml
<CustomField>
    <fullName>Vote_Weight_Formula_c__c</fullName>
    <formula>CASE(Tier_Formula__c, 
  &quot;Sovereign&quot;, 2.00, 
  &quot;Practitioner&quot;, 1.00, 
  0.50
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vote Weight Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>