salesforce-org/org-backup/force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>User__c</columns>
    <columns>Applicant_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>